# furcadia-mod-loader

./: CMakeLists.txt  build.sh  license.md  readme.md
src/: CMakeLists.txt
src/modloader/: CMakeLists.txt  addresses.txt  dllmain.cpp  hooking.cpp  hooking.h  path.cpp  path.h  sha256.c  sha256.h  wsock32_impl.cpp  wsock32_impl.def  wsock32_impl.hpp
src/pluginlib/: CMakeLists.txt  pluginlib.cpp  pluginlib.h
src/testplugin/: CMakeLists.txt  dllmain.cpp  dllmain.h
